sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:7: error: ')' expected but integer literal found.
    for (i<- n-1 down to 1){
                         ^AlgBubbleSort2:14: error: illegal start of simple expression
  }
  ^